# trie-proofs

./: .gitmodules  Cargo.toml  README.md  request.json
cli/: Cargo.toml
cli/src/: main.rs
crates/eth-trie-proofs/: Cargo.toml  README.md
crates/eth-trie-proofs/src/: error.rs  lib.rs  rpc.rs  tx.rs  tx_receipt.rs  tx_receipt_trie.rs  tx_trie.rs
crates/sn-trie-proofs/: Cargo.toml  README.md
crates/sn-trie-proofs/src/: error.rs  lib.rs  rpc.rs  tx_hash.rs  tx_receipt_hash.rs  tx_receipt_trie.rs  tx_trie.rs
examples/: README.md
examples/eth/: README.md
examples/eth/src/: Prover.sol
examples/eth/src/lib/: BytesUtils.sol  MerkleTrie.sol  RLPReader.sol  RLPWriter.sol
examples/eth/test/: Prover.t.sol
src/: lib.rs  main.rs  proof.rs  rpc.rs  tx.rs  tx_receipt.rs  tx_receipt_trie.rs  tx_trie.rs
src/evm/: rpc.rs  tx.rs  tx_receipt.rs  tx_receipt_trie.rs  tx_trie.rs
src/starknet/: block.rs  error.rs  mod.rs  rpc.rs  tx.rs  tx_trie.rs
