[package]
name = "eth-trie-proofs"
version = "0.1.0"
edition = "2021"
description = "Ethereum Transaction Trie Proofs"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/HerodotusDev/eth-trie-proofs"
keywords = ["mpt", "trie", "ethereum"]
categories = ["cryptography", "data-structures", "blockchain"]
exclude = [".github"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
# alloy is still yet stable, important to pin the revision
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "52d16d3" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "52d16d3" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "52d16d3" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "52d16d3" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "52d16d3" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "52d16d3" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "52d16d3" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "52d16d3" }
alloy-primitives = "0.6.4"
url = "2.5.0"
reqwest = "0.11.26"
alloy-rlp = "0.3.4"
eth_trie = "0.4.0"
ethereum-types = "0.14.1"
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.197"
serde_with = { version = "3.7.0", features = ["hex"] }
serde_json = "1.0.114"

[[bin]]
name = "etp-cli"
path = "src/bin/cli.rs"
