[package]
name = "eth-trie-proofs"
version = "0.1.1"
edition = "2021"
description = "Ethereum Transaction Trie Proofs"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/HerodotusDev/eth-trie-proofs"
keywords = ["mpt", "trie", "ethereum"]
categories = ["cryptography", "data-structures", "blockchain"]
exclude = [".github"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
alloy-primitives = { version = "0.7.6" }
alloy = { version = "0.1.1", features = [
    "rpc",
    "rpc-types",
    "rpc-client",
    "network",
    "providers",
    "eips",
    "transports",
    "transport-http",
    "consensus",
    "k256",
] }
url = "2.5.0"
reqwest = { version = "0.11.26", features = ["json"] }
alloy-rlp = { version = "0.3.5" }
eth_trie = "0.4.0"
ethereum-types = "0.14.1"
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.197"
serde_with = { version = "3.7.0", features = ["hex"] }
serde_json = "1.0.114"
thiserror = "1.0"
starknet-types-core = { git = "https://github.com/starknet-io/types-rs.git", version = "0.1.0", default-features = false, features = [
    "serde",
    "hash",
] }
starknet-types-rpc = { version = "0.7.1", git = "https://github.com/starknet-io/types-rs" }
pathfinder-common = { git = "https://github.com/eqlabs/pathfinder.git", rev = "4a18125cae2c8fb1284e9e8fd23acf5d5bcfde18" }
pathfinder-merkle-tree = { git = "https://github.com/eqlabs/pathfinder.git", rev = "4a18125cae2c8fb1284e9e8fd23acf5d5bcfde18" }
pathfinder-crypto = { git = "https://github.com/eqlabs/pathfinder", rev = "4a18125cae2c8fb1284e9e8fd23acf5d5bcfde18" }
time = "0.3.36"
zstd-sys = "=2.0.9" # required to fix build error

[[bin]]
name = "etp-cli"
path = "src/bin/cli.rs"
