[workspace]
resolver = "2"
members = ["cli", "crates/eth-trie-proofs", "crates/sn-trie-proofs"]

[workspace.dependencies]
eth-trie-proofs = { path = "crates/eth-trie-proofs" }
sn-trie-proofs = { path = "crates/sn-trie-proofs" }

tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
alloy-primitives = { version = "0.7.6" }
alloy = { version = "0.1.1", features = [
    "rpc",
    "rpc-types",
    "rpc-client",
    "network",
    "providers",
    "eips",
    "transports",
    "transport-http",
    "consensus",
    "k256",
] }
url = "2.5.0"
reqwest = { version = "0.11.26", features = ["json"] }
alloy-rlp = { version = "0.3.5" }
eth_trie = "0.4.0"
ethereum-types = "0.14.1"
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.197"
serde_with = { version = "3.7.0", features = ["hex"] }
serde_json = "1.0.114"
thiserror = "1.0"
starknet-types-core = "0.1.5"
starknet-types-rpc = { version = "0.7.1", git = "https://github.com/starknet-io/types-rs" }
sn-merkle-trie = { version = "0.1.0" }
bitflags = "2.6.0"
