[package]
name = "eth-trie-proofs"
version = "0.1.2"
edition = "2021"
description = "Ethereum Transaction Trie Proofs"
readme = "README.md"
license-file = "../../LICENSE"
repository = "https://github.com/HerodotusDev/eth-trie-proofs"
keywords = ["mpt", "trie", "ethereum"]
categories = ["cryptography", "data-structures", "blockchain"]
exclude = [".github"]

[dependencies]
tokio.workspace = true
alloy-primitives.workspace = true
alloy.workspace = true
url.workspace = true
reqwest.workspace = true
alloy-rlp.workspace = true
eth_trie.workspace = true
ethereum-types.workspace = true
thiserror.workspace = true
